crates/floe-hunks/tests/snapshots/call__all_hunks_pr0002_state.snap
---
source: crates/adr-hunks/tests/call.rs
expression: hunks
---
[
  {
    "id": "[id]",
    "kind": {
      "kind": "state",
      "node": 1,
      "added_variants": [
        "failed"
      ],
      "removed_variants": []
    },
    "provenance": {
      "source": "floe-hunks/state",
      "version": "0.1.0",
      "pass_id": "hunks",
      "hash": "[hash]"
    }
  }
]
