crates/floe-hunks/tests/snapshots/call__call_hunk_pr0001.snap
---
source: crates/adr-hunks/tests/call.rs
expression: hunk
---
{
  "id": "[id]",
  "kind": {
    "kind": "call",
    "added_edges": [
      6,
      7
    ],
    "removed_edges": [
      5
    ]
  },
  "provenance": {
    "source": "floe-hunks/call",
    "version": "0.1.0",
    "pass_id": "hunks",
    "hash": "[hash]"
  }
}
